--- a/back_server/package.json
+++ b/back_server/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.23.0",
+    "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.3.1"
   }
 }
