--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
-    "socket.io": "^4.3.1",
+    "jquery": "^3.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
