--- a/back_server/package.json
+++ b/back_server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.14",
     "socket.io": "^4.3.1"
   }
 }
