--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "node build/build.js & cd back_server & node server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
