끝말잇기 레이아웃 추가, 시간제한 구현, 국어사전에서 단어 가져오기 구현

--- a/back_server/package.json
+++ b/back_server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "serve": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,11 @@
   "dependencies": {
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.10",
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
+    "request": "^2.88.2",
     "socket.io": "^4.3.1"
   }
 }
